Compare tags case-insensitive.

BUG:440215